Mid Enemy AI update
YIPPEE!!!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Tank-Roguelike.sln"
+    "dotnet.defaultSolution": "[guk].sln"
 }
